--- a/app/src/main/res/layout/fragment_public_work_list.xml
+++ b/app/src/main/res/layout/fragment_public_work_list.xml
@@ -1,78 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_main"
     tools:context=".ui.fragments.publicwork.fragments.PublicWorkListFragment">
 
-    <androidx.core.widget.NestedScrollView
+    <data>
+
+        <variable
+            name="publicWorkViewModel"
+            type="org.mpmg.mpapp.ui.viewmodels.PublicWorkViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:orientation="vertical"
-        android:scrollbars="none">
+        android:background="@drawable/background_main">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            android:orientation="vertical"
+            android:scrollbars="none">
 
-            <EditText
-                android:id="@+id/editText_publicWorkListFragment_search"
-                style="@style/MPAppTheme.EditText2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_default"
-                android:layout_marginTop="@dimen/margin_large"
-                android:layout_marginEnd="@dimen/margin_default"
-                android:drawableStart="@drawable/ic_search"
-                android:gravity="center"
-                android:hint="@string/hint_search_field"
-                android:singleLine="true"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView3"
-                style="@style/MPAppTheme.Title1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_default"
-                android:layout_marginTop="@dimen/margin_large"
-                android:text="@string/title_public_work_list"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText_publicWorkListFragment_search" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton_publicWorkListFragment_add"
-                style="@style/MPAppTheme.ButtonSmallBlue"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/button_default"
-                android:layout_marginEnd="@dimen/margin_default"
-                android:backgroundTint="@color/button2"
-                android:text="@string/button_add"
-                android:textColor="@color/buttonValid1"
-                app:icon="@drawable/ic_add"
-                app:iconTint="@color/buttonValid1"
-                app:layout_constraintBottom_toBottomOf="@+id/textView3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView3" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView_publicWorkListFragment_worksList"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:nestedScrollingEnabled="true"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                android:layout_height="match_parent">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <EditText
+                    android:id="@+id/editText_publicWorkListFragment_search"
+                    style="@style/MPAppTheme.EditText2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="8dp"
+                    android:layout_marginStart="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:layout_marginEnd="@dimen/margin_default"
+                    android:drawableStart="@drawable/ic_search"
+                    android:hint="@string/hint_search_field"
+                    android:singleLine="true"
+                    android:text="@={publicWorkViewModel.query}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.core.widget.NestedScrollView>
+                <TextView
+                    android:id="@+id/textView3"
+                    style="@style/MPAppTheme.Title1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_large"
+                    android:text="@string/title_public_work_list"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/editText_publicWorkListFragment_search" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/materialButton_publicWorkListFragment_add"
+                    style="@style/MPAppTheme.ButtonSmallBlue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/button_default"
+                    android:layout_marginEnd="@dimen/margin_default"
+                    android:backgroundTint="@color/button2"
+                    android:text="@string/button_add"
+                    android:textColor="@color/buttonValid1"
+                    app:icon="@drawable/ic_add"
+                    app:iconTint="@color/buttonValid1"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_publicWorkListFragment_worksList"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:nestedScrollingEnabled="true"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
