--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -1,70 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background_main"
-    android:id="@+id/constraintLayout_addPhotoFragment_mainContainer"
     tools:context=".ui.fragments.photo.PhotoAddFragment">
 
-    <TextView
-        android:id="@+id/textView_addPhotoFragment_photoType"
-        style="@style/MPAppTheme.Title1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_xlarge"
-        android:text="@string/title_add_photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:layout_marginStart="@dimen/margin_xxlarge"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="@dimen/margin_xxlarge"
-        app:cardCornerRadius="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_addPhotoFragment_photoType">
+        <variable
+            name="photoViewModel"
+            type="org.mpmg.mpapp.ui.viewmodels.PhotoViewModel" />
+    </data>
 
-        <ImageView
-            android:id="@+id/imageView_addPhotoFragment_thumbnail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="center"
-            android:src="@drawable/ic_image_default"
-            tools:ignore="ContentDescription" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout_addPhotoFragment_mainContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/background_main">
 
-    </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/textView_addPhotoFragment_photoType"
+            style="@style/MPAppTheme.Title1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_xlarge"
+            android:text="@string/title_add_photo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton_collectMainFragment_confirmPhoto"
-        style="@style/MPAppTheme.ButtonBigBlue"
-        android:layout_width="300dp"
-        android:layout_height="@dimen/height_default"
-        android:layout_marginBottom="@dimen/margin_default"
-        android:text="@string/button_confirm_photo"
-        app:icon="@drawable/ic_camera"
-        app:iconGravity="textStart"
-        app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_addComment"
-        app:layout_constraintEnd_toEndOf="@+id/materialButton_addPhotoFragment_addComment"
-        app:layout_constraintStart_toStartOf="@+id/materialButton_addPhotoFragment_addComment" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="0dp"
+            android:layout_height="300dp"
+            android:layout_marginStart="@dimen/margin_xxlarge"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="@dimen/margin_xxlarge"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_addPhotoFragment_photoType">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton_addPhotoFragment_addComment"
-        style="@style/MPAppTheme.ButtonBigBlue"
-        android:layout_width="300dp"
-        android:layout_height="@dimen/height_default"
-        android:layout_marginBottom="@dimen/margin_xxlarge"
-        android:text="@string/button_add_comment"
-        app:icon="@drawable/ic_comment"
-        app:iconGravity="textStart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+            <ImageView
+                android:id="@+id/imageView_addPhotoFragment_thumbnail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="center"
+                android:src="@drawable/ic_image_default"
+                tools:ignore="ContentDescription" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <EditText
+            android:id="@+id/editText_addPhotoFragment_comments"
+            style="@style/MPAppTheme.EditText2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin_xxlarge"
+            android:layout_marginBottom="@dimen/margin_xxlarge"
+            android:gravity="top|start"
+            android:hint="@string/label_add_comment_hint"
+            android:maxLength="200"
+            android:text="@={photoViewModel.photo.comment}"
+            app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_confirmPhoto"
+            app:layout_constraintEnd_toEndOf="@+id/cardView"
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/cardView"
+            android:importantForAutofill="no"
+            tools:ignore="TextFields" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/materialButton_addPhotoFragment_confirmPhoto"
+            style="@style/MPAppTheme.ButtonBigBlue"
+            android:layout_width="300dp"
+            android:layout_height="@dimen/height_default"
+            android:layout_marginBottom="@dimen/margin_xxxlarge"
+            android:text="@string/button_confirm_photo"
+            app:icon="@drawable/ic_camera"
+            app:iconGravity="textStart"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
