--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="photoViewModel"
             type="org.mpmg.mpapp.ui.viewmodels.PhotoViewModel" />
@@ -59,13 +61,14 @@
             android:layout_marginBottom="@dimen/margin_xxlarge"
             android:gravity="top|start"
             android:hint="@string/label_add_comment_hint"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
             android:maxLength="200"
             android:text="@={photoViewModel.photo.comment}"
             app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_confirmPhoto"
             app:layout_constraintEnd_toEndOf="@+id/cardView"
             app:layout_constraintStart_toStartOf="@+id/cardView"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
-            android:importantForAutofill="no"
             tools:ignore="TextFields" />
 
         <com.google.android.material.button.MaterialButton
@@ -73,10 +76,26 @@
             style="@style/MPAppTheme.ButtonBigBlue"
             android:layout_width="300dp"
             android:layout_height="@dimen/height_default"
-            android:layout_marginBottom="@dimen/margin_xxxlarge"
+            android:layout_marginBottom="@dimen/margin_small"
             android:text="@string/button_confirm_photo"
             app:icon="@drawable/ic_camera"
             app:iconGravity="textStart"
+            app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_deletePhoto"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/materialButton_addPhotoFragment_deletePhoto"
+            style="@style/MPAppTheme.ButtonBigWhite"
+            android:layout_width="300dp"
+            android:layout_height="@dimen/height_default"
+            android:layout_marginBottom="@dimen/margin_xxxlarge"
+            android:text="@string/button_delete_photo"
+            android:textColor="@color/buttonInvalid1"
+            android:visibility="@{photoViewModel.photo.filepath !=null ? View.VISIBLE : View.GONE}"
+            app:icon="@drawable/ic_trash"
+            app:iconGravity="textStart"
+            app:iconTint="@color/buttonInvalid1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
