--- a/app/src/main/res/layout/fragment_public_work_add.xml
+++ b/app/src/main/res/layout/fragment_public_work_add.xml
@@ -33,25 +33,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_default"
-                    android:layout_marginTop="@dimen/margin_xxxlarge"
+                    android:layout_marginTop="@dimen/margin_xxlarge"
                     android:text="@string/title_public_work_add"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:layout_marginTop="@dimen/margin_medium"
                     android:id="@+id/materialButton_addPublicWorkFragment_map"
                     style="@style/MPAppTheme.ButtonSmallBlue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="@dimen/button_default"
-                    android:layout_marginEnd="@dimen/margin_default"
-                    android:backgroundTint="@color/button2"
-                    android:text="@{publicWorkViewModel.locationValid ? @string/button_add : @string/button_add_location_invalid}"
-                    android:textColor="@{publicWorkViewModel.locationValid ? @color/buttonValid1 : @color/buttonInvalid1}"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/height_default"
+                    android:backgroundTint="@{publicWorkViewModel.locationValid ? @color/buttonValid1 : @color/buttonInvalid1}"
+                    android:text="@{publicWorkViewModel.locationValid ? @string/button_add_location_valid : @string/button_add_location_invalid}"
+                    android:textColor="@color/colorWhite"
                     app:icon="@drawable/ic_location"
-                    app:iconTint="@{publicWorkViewModel.locationValid ? @color/buttonValid1 : @color/buttonInvalid1}"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView_addPublicWorkFragment_title"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textView_addPublicWorkFragment_title" />
+                    app:iconTint="@color/colorWhite"
+                    app:layout_constraintEnd_toEndOf="@+id/materialButton_addPublicWorkFragment_add"
+                    app:layout_constraintStart_toStartOf="@+id/materialButton_addPublicWorkFragment_cancel"
+                    app:layout_constraintTop_toBottomOf="@+id/materialButton_addPublicWorkFragment_cancel" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -232,26 +232,28 @@
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_add"
                     style="@style/MPAppTheme.ButtonBigBlue"
-                    android:layout_width="300dp"
+                    android:layout_width="146dp"
                     android:layout_height="@dimen/height_default"
-                    android:layout_marginTop="@dimen/margin_large"
                     android:enabled="@{publicWorkViewModel.isPublicWorkValid}"
                     android:text="@string/title_public_work_add"
+                    app:layout_constraintBottom_toBottomOf="@+id/materialButton_addPublicWorkFragment_cancel"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_city" />
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/materialButton_addPublicWorkFragment_cancel"
+                    app:layout_constraintTop_toTopOf="@+id/materialButton_addPublicWorkFragment_cancel" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton_addPublicWorkFragment_cancel"
                     style="@style/MPAppTheme.ButtonBigGrey"
-                    android:layout_width="300dp"
+                    android:layout_width="146dp"
                     android:layout_height="@dimen/height_default"
-                    android:layout_marginTop="@dimen/margin_default"
+                    android:layout_marginTop="@dimen/margin_xxlarge"
                     android:text="@string/button_cancel"
                     android:textColor="@color/label1"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/materialButton_addPublicWorkFragment_add"
+                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialButton_addPublicWorkFragment_add" />
+                    app:layout_constraintTop_toBottomOf="@+id/editText_addPublicWorkFragment_city" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
