--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,12 +11,14 @@
 
     <color name="label1">#4F4F4F</color>
 
+    <color name="stroke1">#828282</color>
+
+    <color name="buttonFacebookLogin">#3B5998</color>
+    <color name="buttonTwitterLogin">#1DA1F2</color>
     <color name="button1">#2F80ED</color>
     <color name="button1Disabled">#33828282</color>
-
     <color name="button2">#E0E0E0</color>
     <color name="button3">#F2F2F2</color>
-
     <color name="buttonValid1">#2F80ED</color>
     <color name="buttonInvalid1">#EB5757</color>
 
