--- a/app/src/main/res/layout/fragment_add_photo.xml
+++ b/app/src/main/res/layout/fragment_add_photo.xml
@@ -13,92 +13,100 @@
             type="org.mpmg.mpapp.ui.viewmodels.PhotoViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout_addPhotoFragment_mainContainer"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_main">
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/textView_addPhotoFragment_photoType"
-            style="@style/MPAppTheme.Title1"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout_addPhotoFragment_mainContainer"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_xlarge"
-            android:text="@string/title_add_photo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@drawable/background_main">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="0dp"
-            android:layout_height="300dp"
-            android:layout_marginStart="@dimen/margin_xxlarge"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="@dimen/margin_xxlarge"
-            app:cardCornerRadius="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_addPhotoFragment_photoType">
+            <TextView
+                android:id="@+id/textView_addPhotoFragment_photoType"
+                style="@style/MPAppTheme.Title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xlarge"
+                android:text="@string/title_add_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageView_addPhotoFragment_thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="center"
-                android:src="@drawable/ic_image_default"
-                tools:ignore="ContentDescription" />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="0dp"
+                android:layout_height="300dp"
+                android:layout_marginStart="@dimen/margin_xxlarge"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="@dimen/margin_xxlarge"
+                app:cardCornerRadius="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView_addPhotoFragment_photoType">
 
-        </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/imageView_addPhotoFragment_thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_image_default"
+                    tools:ignore="ContentDescription" />
 
-        <EditText
-            android:id="@+id/editText_addPhotoFragment_comments"
-            style="@style/MPAppTheme.EditText2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_xxlarge"
-            android:layout_marginBottom="@dimen/margin_xxlarge"
-            android:gravity="top|start"
-            android:hint="@string/label_add_comment_hint"
-            android:importantForAutofill="no"
-            android:inputType="textMultiLine"
-            android:maxLength="200"
-            android:text="@={photoViewModel.photo.comment}"
-            app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_confirmPhoto"
-            app:layout_constraintEnd_toEndOf="@+id/cardView"
-            app:layout_constraintStart_toStartOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/cardView"
-            tools:ignore="TextFields" />
+            </androidx.cardview.widget.CardView>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton_addPhotoFragment_confirmPhoto"
-            style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginBottom="@dimen/margin_small"
-            android:text="@string/button_confirm_photo"
-            app:icon="@drawable/ic_camera"
-            app:iconGravity="textStart"
-            app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_deletePhoto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <EditText
+                android:id="@+id/editText_addPhotoFragment_comments"
+                style="@style/MPAppTheme.EditText2"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_marginTop="@dimen/margin_xxlarge"
+                android:layout_marginBottom="@dimen/margin_xxlarge"
+                android:gravity="top|start"
+                android:hint="@string/label_add_comment_hint"
+                android:importantForAutofill="no"
+                android:inputType="textMultiLine"
+                android:maxLength="200"
+                android:text="@={photoViewModel.photo.comment}"
+                app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_confirmPhoto"
+                app:layout_constraintEnd_toEndOf="@+id/cardView"
+                app:layout_constraintStart_toStartOf="@+id/cardView"
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                tools:ignore="TextFields" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton_addPhotoFragment_deletePhoto"
-            style="@style/MPAppTheme.ButtonBigWhite"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginBottom="@dimen/margin_xxxlarge"
-            android:text="@string/button_delete_photo"
-            android:textColor="@color/buttonInvalid1"
-            android:visibility="@{photoViewModel.photo.filepath !=null ? View.VISIBLE : View.GONE}"
-            app:icon="@drawable/ic_trash"
-            app:iconGravity="textStart"
-            app:iconTint="@color/buttonInvalid1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton_addPhotoFragment_confirmPhoto"
+                style="@style/MPAppTheme.ButtonBigBlue"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginBottom="@dimen/margin_small"
+                android:text="@string/button_confirm_photo"
+                app:icon="@drawable/ic_camera"
+                app:iconGravity="textStart"
+                app:layout_constraintBottom_toTopOf="@+id/materialButton_addPhotoFragment_deletePhoto"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton_addPhotoFragment_deletePhoto"
+                style="@style/MPAppTheme.ButtonBigWhite"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginBottom="@dimen/margin_xxxlarge"
+                android:text="@string/button_delete_photo"
+                android:textColor="@color/buttonInvalid1"
+                android:visibility="@{photoViewModel.photo.filepath !=null ? View.VISIBLE : View.GONE}"
+                app:icon="@drawable/ic_trash"
+                app:iconGravity="textStart"
+                app:iconTint="@color/buttonInvalid1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+
 </layout>
