--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,168 +7,175 @@
     android:background="@drawable/background_main"
     tools:context=".ui.fragments.login.LoginFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="208dp"
-            android:layout_height="73dp"
-            android:layout_marginTop="100dp"
-            android:src="@drawable/mmpg_logo"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/textView"
-            style="@style/MPAppTheme.InputTitle1"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginTop="86dp"
-            android:labelFor="@id/editText_loginFragment_userInput"
-            android:text="@string/label_email"
-            app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            android:paddingBottom="@dimen/margin_default">
 
-        <EditText
-            android:id="@+id/editText_loginFragment_userInput"
-            style="@style/MPAppTheme.EditText1"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginStart="@dimen/margin_xxlarge"
-            android:layout_marginTop="@dimen/margin_xxsmall"
-            android:layout_marginEnd="@dimen/margin_xxlarge"
-            android:hint="@string/hint_login_email"
-            android:importantForAutofill="no"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="208dp"
+                android:layout_height="73dp"
+                android:layout_marginTop="100dp"
+                android:src="@drawable/mmpg_logo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription" />
 
-        <TextView
-            android:id="@+id/textView2"
-            style="@style/MPAppTheme.InputTitle1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:labelFor="@id/editText_loginFragment_passwordInput"
-            android:text="@string/label_password"
-            app:layout_constraintStart_toStartOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/editText_loginFragment_userInput" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputTextLayout_loginFormFragment_password"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_xxsmall"
-            android:paddingTop="0dp"
-            app:boxBackgroundMode="none"
-            app:hintEnabled="false"
-            app:layout_constraintEnd_toEndOf="@+id/editText_loginFragment_userInput"
-            app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:passwordToggleEnabled="true">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editText_loginFragment_passwordInput"
-                style="@style/MPAppTheme.EditText1"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_login_password"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginTop="86dp"
+                android:labelFor="@id/editText_loginFragment_userInput"
+                android:text="@string/label_email"
+                app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+            <EditText
+                android:id="@+id/editText_loginFragment_userInput"
+                style="@style/MPAppTheme.EditText1"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginStart="@dimen/margin_xxlarge"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                android:layout_marginEnd="@dimen/margin_xxlarge"
+                android:hint="@string/hint_login_email"
                 android:importantForAutofill="no"
-                android:inputType="textPassword"
-                android:padding="0dp"
-                android:singleLine="true" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton"
-            style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginTop="@dimen/margin_xxlarge"
-            android:backgroundTint="@color/button1"
-            android:text="@string/button_login"
-            app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
-            app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
-            app:layout_constraintTop_toBottomOf="@+id/inputTextLayout_loginFormFragment_password" />
+            <TextView
+                android:id="@+id/textView2"
+                style="@style/MPAppTheme.InputTitle1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:labelFor="@id/editText_loginFragment_passwordInput"
+                android:text="@string/label_password"
+                app:layout_constraintStart_toStartOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/editText_loginFragment_userInput" />
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="24dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="@dimen/margin_xsmall"
-            android:layout_marginEnd="@dimen/margin_small"
-            android:background="@color/label1"
-            app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintEnd_toStartOf="@+id/textView15"
-            app:layout_constraintTop_toTopOf="@+id/textView15" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputTextLayout_loginFormFragment_password"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_xxsmall"
+                android:paddingTop="0dp"
+                app:boxBackgroundMode="none"
+                app:hintEnabled="false"
+                app:layout_constraintEnd_toEndOf="@+id/editText_loginFragment_userInput"
+                app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
+                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:passwordToggleEnabled="true">
 
-        <View
-            android:layout_width="24dp"
-            android:layout_height="1dp"
-            android:layout_marginStart="@dimen/margin_small"
-            android:layout_marginTop="@dimen/margin_xsmall"
-            android:background="@color/label1"
-            app:layout_constraintBottom_toBottomOf="@+id/textView15"
-            app:layout_constraintStart_toEndOf="@+id/textView15"
-            app:layout_constraintTop_toTopOf="@+id/textView15" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editText_loginFragment_passwordInput"
+                    style="@style/MPAppTheme.EditText1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_login_password"
+                    android:importantForAutofill="no"
+                    android:inputType="textPassword"
+                    android:padding="0dp"
+                    android:singleLine="true" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_xlarge"
-            android:fontFamily="@font/nunito_italic"
-            android:text="@string/label_if_prefer"
-            app:layout_constraintEnd_toEndOf="@+id/materialButton"
-            app:layout_constraintStart_toStartOf="@+id/materialButton"
-            app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/materialButton"
+                style="@style/MPAppTheme.ButtonBigBlue"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginTop="@dimen/margin_xxlarge"
+                android:backgroundTint="@color/button1"
+                android:text="@string/button_login"
+                app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
+                app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
+                app:layout_constraintTop_toBottomOf="@+id/inputTextLayout_loginFormFragment_password" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_loginFragment_googleSignIn"
-            style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginTop="@dimen/margin_default"
-            android:backgroundTint="@color/colorWhite"
-            android:drawableLeft="@drawable/ic_google_logo"
-            android:text="@string/button_enter_with_google"
-            android:textColor="@color/label1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
+            <View
+                android:id="@+id/view"
+                android:layout_width="24dp"
+                android:layout_height="1dp"
+                android:layout_marginTop="@dimen/margin_xsmall"
+                android:layout_marginEnd="@dimen/margin_small"
+                android:background="@color/label1"
+                app:layout_constraintBottom_toBottomOf="@+id/textView15"
+                app:layout_constraintEnd_toStartOf="@+id/textView15"
+                app:layout_constraintTop_toTopOf="@+id/textView15" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_loginFragment_facebookSignIn"
-            style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginTop="@dimen/margin_default"
-            android:backgroundTint="@color/buttonFacebookLogin"
-            android:drawableLeft="@drawable/ic_facebook_logo"
-            android:text="@string/button_enter_with_facebook"
-            app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
-            app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
-            app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_googleSignIn" />
+            <View
+                android:layout_width="24dp"
+                android:layout_height="1dp"
+                android:layout_marginStart="@dimen/margin_small"
+                android:layout_marginTop="@dimen/margin_xsmall"
+                android:background="@color/label1"
+                app:layout_constraintBottom_toBottomOf="@+id/textView15"
+                app:layout_constraintStart_toEndOf="@+id/textView15"
+                app:layout_constraintTop_toTopOf="@+id/textView15" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_loginFragment_twitterSignIn"
-            style="@style/MPAppTheme.ButtonBigBlue"
-            android:layout_width="300dp"
-            android:layout_height="@dimen/height_default"
-            android:layout_marginTop="@dimen/margin_default"
-            android:backgroundTint="@color/buttonTwitterLogin"
-            android:drawableLeft="@drawable/ic_twitter_logo"
-            android:text="@string/button_enter_with_twitter"
-            app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_facebookSignIn"
-            app:layout_constraintStart_toStartOf="@+id/button_loginFragment_facebookSignIn"
-            app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_facebookSignIn" />
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_large"
+                android:fontFamily="@font/nunito_italic"
+                android:text="@string/label_if_prefer"
+                app:layout_constraintEnd_toEndOf="@+id/materialButton"
+                app:layout_constraintStart_toStartOf="@+id/materialButton"
+                app:layout_constraintTop_toBottomOf="@+id/materialButton" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_loginFragment_googleSignIn"
+                style="@style/MPAppTheme.ButtonBigBlue"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginTop="@dimen/margin_default"
+                android:backgroundTint="@color/colorWhite"
+                android:drawableLeft="@drawable/ic_google_logo"
+                android:text="@string/button_enter_with_google"
+                android:textColor="@color/label1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_loginFragment_facebookSignIn"
+                style="@style/MPAppTheme.ButtonBigBlue"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginTop="@dimen/margin_default"
+                android:backgroundTint="@color/buttonFacebookLogin"
+                android:drawableLeft="@drawable/ic_facebook_logo"
+                android:text="@string/button_enter_with_facebook"
+                app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
+                app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
+                app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_googleSignIn" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_loginFragment_twitterSignIn"
+                style="@style/MPAppTheme.ButtonBigBlue"
+                android:layout_width="300dp"
+                android:layout_height="@dimen/height_default"
+                android:layout_marginTop="@dimen/margin_default"
+                android:backgroundTint="@color/buttonTwitterLogin"
+                android:drawableLeft="@drawable/ic_twitter_logo"
+                android:text="@string/button_enter_with_twitter"
+                app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_facebookSignIn"
+                app:layout_constraintStart_toStartOf="@+id/button_loginFragment_facebookSignIn"
+                app:layout_constraintTop_toBottomOf="@+id/button_loginFragment_facebookSignIn" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
