--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
     <color name="textAddress">#828282</color>
 
     <color name="backgroundImage1">#E0E0E0</color>
+    <color name="backgroundMapHint">#80333333</color>
 
     <color name="radioButtonNormal">#BDBDBD</color>
 
